Revise personal letter and footer details
Updated email address and added a link to the portfolio in the footer.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <h1> &#9884; Suha Almadi &#9884;	
                 <p>skol: sankta maria popular secondary school</p>
                 <p>&#9750; My Address: <a href="https://maps.app.goo.gl/9QAKqe4ALtkzrF4g9" alt="Address">Address</a></p>
-                <p>&#9743; My Phone Number: 0760898485</p>
-                <p>&#9993; My Email Address: suhaalmdi93@gmail.com</p>
+                <p>&#9993; My Email Address: almadisuha1@gmail.com </p>
                 <p>&#9787; To: </p>
         </h1>
         </dev>
@@ -70,9 +69,11 @@ My Phone Number: 0760898485
 
     <div id="footer">
         <h4> &#169; All rights reserved</h4>
+        <a href="https://suhaalmadi93-design.github.io/portfolio-Suha-Almadi/">Home</a>
     </div>
 <!--footer end-->    
    </div> 
 </body>
 
 </html>
+
