--- a/index.html
+++ b/index.html
@@ -69,11 +69,14 @@ My Phone Number: 0760898485
 
     <div id="footer">
         <h4> &#169; All rights reserved</h4>
+          <div class="home">
         <a href="https://suhaalmadi93-design.github.io/portfolio-Suha-Almadi/">Home</a>
+        </div>
     </div>
 <!--footer end-->    
    </div> 
 </body>
 
 </html>
+
 
