Revise personal letter and correct errors
Updated personal letter content and fixed typos.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="header">
         <dev class="inforation">
         <img src="IMG_9868.JPG" alt="suha"> 
+        <a href="#">HOME</a>
         <h1> &#9884; Suha Almadi &#9884;	
                 <p>skol: sankta maria popular secondary school</p>
                 <p>&#9750; My Address: <a href="https://maps.app.goo.gl/9QAKqe4ALtkzrF4g9" alt="Address">Address</a></p>
@@ -48,8 +49,8 @@ Best, Suha Almadi
 <br/>
 <p>  
 My Ful Name: Suha Almadi <br/>
-My Email Address:almadisuha1@gmail.com
- <br/> 
+My Email Address: suhaalmdi93@gmail.com <br/> 
+My Phone Number: 0760898485      
 </p>
 
 </div>
@@ -65,6 +66,7 @@ My Email Address:almadisuha1@gmail.com
    </div> 
 </body>
 </html>
+
 
 
 
