Add Projects link and fix formatting issues

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div id="header">
         <dev class="inforation">
         <img src="IMG_9868.JPG" alt="suha"> 
-        <a href="#">HOME</a>
+        <a href="https://suhaalmadi93-design.github.io/portfolio-Suha-Almadi/">HOME</a>
+        <a href="https://suhaalmadi93-design.github.io/Projects/">Projects</a>
         <h1> &#9884; Suha Almadi &#9884;	
                 <p>skol: sankta maria popular secondary school</p>
                 <p>&#9750; My Address: <a href="https://maps.app.goo.gl/9QAKqe4ALtkzrF4g9" alt="Address">Address</a></p>
@@ -66,6 +67,7 @@ My Phone Number: 0760898485
    </div> 
 </body>
 </html>
+
 
 
 
