--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Best, Suha Almadi
 <br/>
 <p>  
 My Ful Name: Suha Almadi <br/>
-My Email Address: suhaalmdi93@gmail.com <br/> 
+My Email Address: almadisuha1@gmail.com <br/> 
 </p>
 
 </div>
@@ -66,6 +66,7 @@ My Email Address: suhaalmdi93@gmail.com <br/>
    </div> 
 </body>
 </html>
+
 
 
 
